--- a/public/estilo_index.css
+++ b/public/estilo_index.css
@@ -158,7 +158,7 @@ input[type="text"], select {
 }
 
 .pagination button:disabled {
-    background-color: #cccccc;
+    background-color: #d81818;
     cursor: not-allowed;
 }
 
@@ -166,7 +166,7 @@ input[type="text"], select {
     margin-right: 15px;
     font-size: 16px;
     font-weight: bold;
-    color: #d4d4d4;
+    color: #bb0e0e;
 }
 
 button#buscarButton {
